--- a/museum/tour/1/index.html
+++ b/museum/tour/1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Museum Tour</title>
+        <title>Maple Ridge Museum Tour</title>
         <meta charset="UTF-8" />
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, minimal-ui" />
         <meta name="description" content="" />
-        <meta name="viewer_title" content="Museum Tour" />
+        <meta name="viewer_title" content="Maple Ridge Museum Tour" />
         <meta name="viewer_description" content="" />
         <meta name="image" content="assets/panoramas/6413940363/Po2XFgqt4xdslFh/share/QHg35BEtMgV16b0-7hNC5iwlCClX028iVXNeA1ISkCNnkH.jpg"/>
         <meta name="url" content=""/>
@@ -15,7 +15,7 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta property="og:title" content="Museum Tour"/>
+        <meta property="og:title" content="Maple Ridge Museum Tour"/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content=""/>
         <meta property="og:image" content="assets/panoramas/6413940363/Po2XFgqt4xdslFh/share/QHg35BEtMgV16b0-7hNC5iwlCClX028iVXNeA1ISkCNnkH.jpg"/>
@@ -25,7 +25,7 @@
         <meta property="og:description" content=""/>
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@theasys_io">
-        <meta name="twitter:title" content="Museum Tour">
+        <meta name="twitter:title" content="Maple Ridge Museum Tour">
         <meta name="twitter:description" content="">
         <meta name="twitter:image" content="assets/panoramas/6413940363/Po2XFgqt4xdslFh/share/QHg35BEtMgV16b0-7hNC5iwlCClX028iVXNeA1ISkCNnkH.jpg">
         <link rel="shortcut icon" href="assets/img/icons/favicon.ico" />
